平台测试连接
