# server/docs/swagger.json
@@ -1712,6 +1712,82 @@
                 }
             }
         },
+        "/resource/server/platformCreateKey": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Resource_Server"
+                ],
+                "summary": "生成平台密钥对",
+                "parameters": [
+                    {
+                        "description": "生成平台密钥对",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.GetById"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"success\":true,\"data\":{},\"msg\":\"创建成功\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/resource/server/serverConnect": {
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Resource_Server"
+                ],
+                "summary": "测试连接",
+                "parameters": [
+                    {
+                        "description": "测试连接",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.GetById"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"success\":true,\"data\":{},\"msg\":\"连接成功\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/resource/server/serverCreate": {
             "post": {
                 "security": [
@@ -2258,6 +2334,14 @@
                 }
             }
         },
+        "config.Platformkey": {
+            "type": "object",
+            "properties": {
+                "path": {
+                    "type": "string"
+                }
+            }
+        },
         "config.Qiniu": {
             "type": "object",
             "properties": {
@@ -2311,6 +2395,10 @@
                 "mysql": {
                     "type": "object",
                     "$ref": "#/definitions/config.Mysql"
+                },
+                "platformkey": {
+                    "type": "object",
+                    "$ref": "#/definitions/config.Platformkey"
                 },
                 "qiniu": {
                     "type": "object",
@@ -2524,6 +2612,10 @@
                 "resourceenv": {
                     "type": "object",
                     "$ref": "#/definitions/model.ResourceEnv"
+                },
+                "status": {
+                    "description": "测试连接，1.未测试，2.连接中, 3.连接成功, 4. 连接异常",
+                    "type": "integer"
                 },
                 "user": {
                     "description": "用户名",
