# server/router/resource_server.go
@@ -14,5 +14,6 @@ func InitResourceServerRouter(Router *gin.RouterGroup) {
 		ApiRouter.POST("serverUpdate", v1.ServerUpdate)          // 主机信息更新
 		ApiRouter.DELETE("serverDelete", v1.ServerDelete)        // 主机信息删除
 		ApiRouter.GET("platformCreateKey", v1.PlatformCreateKey) // 平台密钥对创建
+		ApiRouter.POST("serverConnect", v1.ServerConnect)        // 主机连接测试
 	}
 }
